Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.8, 6.2, 6.3, 6.4
-
-
52dcd47850 (qt/qtbase/dev) 52dcd47850 (qt/tqtc-qtbase/dev)
Description
I take it the first is the function itself and the second one is triggered from X server, but since the state does not appear to have changed at all, maybe there could just be a check to see if the value differs and only then emit the signal.
To reproduce, run attached example. It prints out Qt::WindowMaximized twice.
Attachments
Issue Links
- duplicates
-
QTBUG-70095 QWindowSystemInterface synchronous mode
-
- Reported
-