Emit windowStateChanged in QGuiApplicationPrivate instead of QWindow

When the visual state of a QWindow changed, QGuiApplicationPrivate
sent an event to QWindow, where the visibility was updated and the
signal was emitted.

Following the pricinple of other visual updates, these actions have
been moved to QGuiApplicationPrivate.

Task-number: QTBUG-102478
Change-Id: I94f2f5b7570580ce422ca9dc03013742f6a9baba
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>